--- a/index.html
+++ b/index.html
@@ -65,8 +65,22 @@
     </section>
 
     <section class = "posty">
-      <div><h1>Posty</h1></div>
-      <div></div>
+      <div>
+        <h1>Posty</h1>
+      <button> Filtry</button>
+    </div>
+      <div class="posty post">
+        <div><h1>Kaliop Poland</h1>
+        <a> 21 czerwca 0 08.51</a>
+        <button>...</button>
+      </div>
+      <div class="tresc">Kolejne spotkanie Rady Pracodawców w Instyt Nauk Ścisłych i Techniczny za nami!
+        <a>Rozmawialiśmy o czymś dużym-Centrum Nowoczesnych Technologii. Jest to działanie długoterminowe, Ale nie możemy wyjawić za wiele.</a>
+<a>Trzymamy kciuki , żeby nadszedł moment , gdzie mówić o nim będą wszyscy</a>
+
+<img>
+      </div>
+      </div>
     </section>
 </main>
     
